# giton

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  planfile.yaml  pyproject.toml
.koru/: event-store.jsonl  history.jsonl  onboarding.json  project.json
.koru/events/: observability.jsonl
.planfile/: config.yaml
.planfile/.koru/: autonomous-state.json  autonomy-telemetry.json  event-store.jsonl  nfo-events.jsonl  serve-endpoint.json
.planfile/sprints/: current.yaml
examples/advanced/: Dockerfile  README.md  main.py
examples/advanced/logs/: log.txt
examples/basic/: Dockerfile  README.md  main.py
examples/basic/logs/: log.txt
examples/plugins/: README.md  test_plugin_lifecycle.py
examples/testing/: Dockerfile  README.md  docker-compose.yml  test_giton_integration.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
src/giton/: __init__.py  __main__.py  catalog.py  cli.py  config.py  context.py  history.py  hooks.py  interactive.py  plugins.py  policies.py  repo_config.py  runner.py  shell.py
src/gix/: __init__.py  __main__.py  catalog.py  cli.py  config.py  context.py  hooks.py  plugins.py  runner.py  shell.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_basic.py  test_history.py  test_plugin_runner.py  test_policies.py
(+4 files in other folders)
