[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "giton"
version = "0.1.4"
description = "Local AI layer for git: orchestrates policies & plugins between commit and push."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "semcod" }, {name = "Tom Sapletta",email = "tom@sapletta.com"}]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
giton = "giton.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/giton"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }

[tool.pytest.ini_options]
pythonpath = ["src"]
